[gd_scene load_steps=3 format=3 uid="uid://bar50he8xv3rs"]

[ext_resource type="Script" uid="uid://br4p4nvljgm1f" path="res://scrips/kill_box.gd" id="1_y6nwa"]
[ext_resource type="AudioStream" uid="uid://c14sbkjvmsos5" path="res://assets/PNG/player/death2-340040.mp3" id="2_xtnv2"]

[node name="kill_box" type="Area2D"]
collision_mask = 2
script = ExtResource("1_y6nwa")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.2

[node name="death_sfx" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_xtnv2")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
